# Ai-accelerator

./: .gitattributes  .gitignore  CLAUDE.md  INFRASTRUCTURE.md  PHASE0_SPEC.md  PHASE1_SPEC.md  PHASE2_ANALYST_SPEC.md  PHASE2_OVERVIEW.md  PHASE2_SPEC.md  PHASE3_SPEC.md  PHASE4_SPEC.md  PROGRESS_SNAPSHOT.md  PROJECT_BLUEPRINT.md  deploy.sh  pyproject.toml  requirements.txt
knowledge/pulse/: SCHEMA_NOTES.md
meta_ops/analyst/: context.py  v0.py
meta_ops/analyst/tests/: test_context.py
meta_ops/cli/: main.py
meta_ops/common/: db.py  logging_config.py  run_log.py
meta_ops/facilitator/: archiver.py  bots.py  handlers.py  pusher.py  report_parser.py  run.py  state_machine.py
meta_ops/facilitator/tests/: test_archiver.py  test_report_parser.py  test_state_machine.py
meta_ops/facilitator/tests/fixtures/: 2026W19.md
meta_ops/librarian/: build_code_index.py  build_extracted.py  change_detect.py  llm_client.py  pulse_source.py  sync_docs.py  v0.py  v1.py
meta_ops/librarian/tests/: test_change_detect.py
meta_ops/pulse_connector/: connector.py  models.py
meta_ops/pulse_connector/tests/: test_connector.py
meta_ops/watcher/: v0.py
prompts/: analyst_v0_weekly.md  code_index_v1.md  extracted_v1.md
scripts/: health_check.py
sql/: 001_init_schema.sql  002_run_log.sql  003_llm_calls.sql  004_decision_threads.sql
systemd/: acc-facilitator-archiver.service  acc-facilitator-archiver.timer
